--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,7 @@
       integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
       crossorigin=""
     ></script>
-    <!-- <script src="http://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script> -->
-    <!-- <script src="js/leaflet-providers.js"></script> -->
+    <script src="js/leaflet-providers.js"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
