--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="mapM"
+      content="Website to visualize the housing market of the United States"
     />
     <!-- React leaflets stuff -->
     <link
@@ -38,7 +38,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>mapM</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
